<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorizatoin.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/registration"
            android:textSize="@dimen/CapsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewText"
            android:layout_width="@dimen/rectangleImageRegWidth"
            android:layout_height="@dimen/rectangleImageRegHeight"
            android:layout_marginBottom="@dimen/marginPictureReg"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_rectangle_500" />

        <ImageView
            android:layout_width="@dimen/rectangleImageRegWidth"
            android:layout_height="@dimen/rectangleImageRegHeight"
            android:layout_marginTop="@dimen/marginPictureReg"
            android:alpha="0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_rectangle_500" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBetweenRegistrView"
            android:backgroundTint="@color/white"
            android:ems="12"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:layout_marginTop="@dimen/marginNameFromTop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextSurename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@color/white"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="12"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/editTextSurename"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextSurename"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurename" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="12"
            android:hint="e-mail"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate"
            app:layout_constraintStart_toStartOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="8"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/marginPasswordFromStart"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="8"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            android:layout_marginBottom="@dimen/marginPasswordFromBotton"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

        <CheckBox
            android:id="@+id/checkBoxAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/userAgree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="@dimen/buttonLoginWidth"
            android:layout_height="@dimen/buttonLoginHeight"
            android:enabled="false"
            android:background="@drawable/button_style"
            android:text="@string/registration"
            android:layout_marginBottom="@dimen/marginButtonFromParent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="136dp"
            android:text="@string/repeat_password"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
            app:layout_constraintEnd_toStartOf="@+id/editTextRepeatPassword"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>